--- a/_config.yml
+++ b/_config.yml
@@ -2,20 +2,19 @@ title: Your awesome title
 author: GitHub User
 email: your-email@domain.com
 description: > # this means to ignore newlines until "twitter_username:"
-  Ben Kline = Instructional Design and Delivery, Multimedia Production, Web Application Development.
 
 # social links
-twitter_username: boisebenkline
-github_username:  benkline
-rss: rss
-# dribbble_username: jekyll
-facebook_username: boisebenkline
-# flickr_username: jekyll
-instagram_username: bnkln
-linkedin_username: boisebenkline
-# pinterest_username: jekyll
-# youtube_username: jekyll
-googleplus_username: +BenKline
+# twitter_username:
+# github_username:
+# rss: rss
+# dribbble_username:
+# facebook_username:
+# flickr_username:
+# instagram_username:
+# linkedin_username:
+# pinterest_username:
+# youtube_username:
+# googleplus_username:
 
 # Mastodon instances
 # mastodon:
@@ -29,8 +28,8 @@ show_excerpts: false # set to true to show excerpts on the homepage
 
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
-minima:
-  date_format: "%b %-d, %Y"
+
+date_format: "%b %-d, %Y"
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
